--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/common": "~11.2.5",
     "@angular/compiler": "~11.2.5",
     "@angular/core": "~11.2.5",
-    "@angular/fire": "^6.1.4",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~11.2.5",
     "@angular/material": "^11.2.4",
     "@angular/platform-browser": "~11.2.5",
@@ -50,6 +50,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "jsonc-parser": "^3.0.0"
   }
 }
